fix(components): adjust vertical spacing for the AppCard container

--- a/src/components/Home/AppCard/AppCard.module.css
+++ b/src/components/Home/AppCard/AppCard.module.css
@@ -1,5 +1,5 @@
 .appCardContainer {
-  @apply relative flex w-[280px] flex-col border-[1px] border-secondary;
+  @apply relative flex h-[310px] w-[280px] flex-col border-[1px] border-secondary;
   @apply space-y-5 rounded-lg p-5 hover:bg-primary hover:shadow-md;
   @apply duration-150 hover:border-primary;
 }
